# calisthenics-web

./: .gitignore  CLAUDE.md  Makefile  astro.config.mjs  components.json  package.json  pnpm-lock.yaml  pyrightconfig.json  server.mjs  tsconfig.json
bot/: .env.example  Dockerfile  broadcast_links.py  compose.yml  config.py  main.py  pyproject.toml  seed_stream2.py
bot/app/: admin.py  admin_ui.py  context.py  payments.py  subscriptions.py
bot/db/: init.py  repo.py  seeds.py
bot/handlers/: admin.py  client.py
bot/handlers/admin/: __init__.py  callbacks.py  commands.py  keyboards.py
bot/scheduler/: jobs.py
bot/services/: channels.py  prodamus.py
bot/templates/admin/: base.html  dashboard.html  login.html  product_edit.html  products.html  subscriptions.html  users.html
bot/tests/: conftest.py  test_keyboards.py  test_repo_admin.py
bot/ui/: keyboards.py  messages.py
bot/webhooks/: prodamus.py
docs/: 2-й поток Калистеника (1).docx
docs/superpowers/plans/: 2026-03-21-hero-video-stories.md  2026-03-28-admin-ux.md
scripts/: generate-pdf.html
src/components/: AccessStepsSection.astro  AdvantagesSection.astro  CatalogSection.astro  ChallengeSection.astro  FaqSection.svelte  FooterSection.astro  HeroSection.astro  LeadFormSection.svelte  MarqueeTicker.astro  Navbar.svelte  ProgramSection.astro  TestimonialsSection.astro
src/data/: content.ts
src/layouts/: Layout.astro
src/pages/: index.astro
src/styles/: global.css
web/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  server.mjs
web/scripts/: generate-pdf.mjs
(+25 files in other folders)
