[project]
name = "bot"
version = "0.1.0"
description = "Caliathletics Telegram bot — channel access via Prodamus subscriptions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.17",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.7",
    "apscheduler>=3.11",
    "datasette>=0.65.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
